# downloader

./: Cargo.toml  README.md
examples/: download_version.rs
src/: json_profiles.rs  launcher_manifest.rs  lib.rs  manifest.rs
src/client/: client_downloader.rs  mod.rs  verify.rs
