[package]
name = "downloader_mc"
version = "0.1.4"
edition = "2021"
description = "A library for downloading Minecraft assets and libraries."
license = "MIT"
repository = "https://github.com/aapelix/downloader"
include = ["/src", "/examples"]

[dependencies]
async-trait = "0.1.64"
chksum = "0.4.0"
futures = "0.3"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "time", "rt"] }

[dev-dependencies]
pbr = "1.0.4"
